--- a/Web Page1.0/gallery.html
+++ b/Web Page1.0/gallery.html
@@ -81,35 +81,52 @@
             <ul class="image-gallery">
                 <li class="image-gallery-item">
                     <img class="myImg" src="./pictures/start page/image.png" alt=""/>
-                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                    <div class="description">
+                        <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
+                    </div>
+                    
                 </li>
                 <li class="image-gallery-item">
                     <img class="myImg" src="./pictures/start page/image.png" alt="" />
-                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                    <div class="description">
+                        <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
+                    </div>
                 </li>
                 <li class="image-gallery-item">
                     <img class="myImg" src="./pictures/start page/image.png" alt="" />
-                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                    <div class="description">
+                        <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
+                    </div>
                 </li>
                 <li class="image-gallery-item">
                     <img class="myImg" src="./pictures/start page/image.png" alt="" />
-                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                    <div class="description">
+                        <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
+                    </div>
                 </li>
                 <li class="image-gallery-item">
                     <img class="myImg" src="./pictures/start page/image.png" alt="" />
-                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                    <div class="description">
+                        <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
+                    </div>
                 </li>
                 <li class="image-gallery-item">
                     <img class="myImg" src="./pictures/start page/image.png" alt="" />
-                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                    <div class="description">
+                        <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
+                    </div>
                 </li>
                 <li class="image-gallery-item">
                     <img class="myImg" src="./pictures/start page/image.png" alt="" />
-                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                    <div class="description">
+                        <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
+                    </div>
                 </li>
                 <li class="image-gallery-item">
                     <img class="myImg" src="./pictures/start page/image.png" alt="" />
-                    <p class="img-text">PROJECT TITLE John D. - Grade X Rhode Island</p>
+                    <div class="description">
+                        <p class="img-text">PROJECT TITLE <br>John D. - Grade X <br>Rhode Island</p>
+                    </div>
                 </li>
             </ul>
 
