--- a/Web Page1.0/about.html
+++ b/Web Page1.0/about.html
@@ -74,7 +74,7 @@
                     <h2 class="name">Alara Kalfazade</h2>
                     <p class="card-text">Alara Kalfazade is a senior at Brown University studying Computer Science-Economics. She is from Istanbul, Turkey. 
                         She is passionate about UI/UX and graphic design. 
-                        <br>View Alara's website here: <a href="https://www.gonsherdesign.com/" target="_blank">www.gonsherdesign.com/</a>
+                        <br>View Alara's website here: <a href="https://akalfaza.github.io/" target="_blank">https://akalfaza.github.io/</a>
                     </p>
                 </div>
 
