feedback tab created
slide-out feedback tab + google form linked button

Further action:
1. auto populate star rating
2. make feedback tab available on all pages

--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -15,6 +15,7 @@
 
     <title>Home - Printer Form</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -71,6 +72,22 @@
                 <button class="upload-button" id="openUploadPopupBtn" type="button">UPLOAD</button>
             </div>
 
+        </div>
+    </div>
+
+    <input type="checkbox" id="slide" name="" value="" />
+    <div class="fb-container">
+        <label for="slide" class="toggle"><div id="fb-tab">Feedback</div></label>
+        <div class="sidebar" id="fb-form" >
+            <h3>Printerform Experience:</h3>
+            <div id="star-rating">
+                <i class="fa fa-star fa-2xl"></i>
+                <i class="fa fa-star fa-2xl"></i>
+                <i class="fa fa-star fa-2xl"></i>
+                <i class="fa fa-star fa-2xl"></i>
+                <i class="fa fa-star fa-2xl"></i>
+            </div>
+            <a href="https://forms.gle/s7Ea2EpqiAPbn8rN7" target="_blank"><button id="fb-survey-btn">Take Our Survey</button></a>
         </div>
     </div>
 
