added one activity and one lesson page

--- a/Web Page1.0/resource.html
+++ b/Web Page1.0/resource.html
@@ -110,7 +110,7 @@
             </p>
             <div class="image-gallery">
                 <div class="image-gallery-row">
-                    <a class="image-gallery-item">
+                    <a class="image-gallery-item" href="./activity-a.html">
                         <img src="./pictures/start page/ActivityA.png" alt="" />
                     </a>
                     <a class="image-gallery-item">
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="image-gallery-row">
-                    <a class="image-gallery-item">
+                    <a class="image-gallery-item" href="./lesson-a.html">
                         <img src="./pictures/start page/LessonA.png" alt="" />
                     </a>
                     <a class="image-gallery-item">
