added one activity and one lesson page

--- a/Web Page1.0/lesson-a.html
+++ b/Web Page1.0/lesson-a.html
@@ -36,7 +36,7 @@
     <!-- activity -->
     <div id="education-resources">
         <div class="container" style="margin:30px 10%; margin-bottom: 0; background: rgba(255, 224, 125, 0.20);">
-            <h1 class="title" style="text-align:center;">Lesson A - Modeling Simple Shapes </h1>
+            <h1 class="title" style="text-align:center;">LESSON A - Modeling Simple Shapes </h1>
             <div class="text-container">
                 <div class="activity-text-sub-container">
                     <h2 class="activity-sub-title">Activity Brief:</h2>
