--- a/upload.html
+++ b/upload.html
@@ -15,7 +15,7 @@
 
     <title>Home - Printer Form</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="EditStyles.css">
+    <link rel="stylesheet" href="editStyles.css">
 </head>
 
 <body>
