--- a/Web Page1.0/upload.html
+++ b/Web Page1.0/upload.html
@@ -204,21 +204,21 @@
                                     </div>
                                     <input type="range" id="magnification" name="magnification" min="0.1" max="2" step="0.1" value="1">
                                 </div>
-                                <div class="grid-control">
+                                <div class="grid-control controlPreview">
                                     <div class="rotation-input-wrapper">
                                         <label for="rotationX">Rotation X-Axis: </label>
                                         <input id="rotation-x-value" class="input-value" type="text" value="1.0">
                                     </div>
                                     <input type="range" id="rotationX" name="rotationX" min="0.1" max="2" step="0.1" value="1">
                                 </div>
-                                <div class="grid-control">
+                                <div class="grid-control controlPreview">
                                     <div class="rotation-input-wrapper">
                                         <label for="rotationY">Rotation Y-Axis: </label>
                                         <input id="rotation-y-value" class="input-value" type="text" value="1.0">
                                     </div>
                                     <input type="range" id="rotationY" name="rotationY" min="0.1" max="2" step="0.1" value="1">
                                 </div>
-                                <div class="grid-control">
+                                <div class="grid-control controlPreview">
                                     <div class="rotation-input-wrapper">
                                         <label for="rotationZ">Rotation Z-Axis: </label>
                                         <input id="rotation-z-value" class="input-value" type="text" value="1.0">
@@ -226,7 +226,7 @@
                                     <input type="range" id="rotationZ" name="rotationZ" min="0.1" max="2" step="0.1" value="1">
                                 </div>
                                 
-                                <div class="grid-control">
+                                <div class="grid-control controlPreview">
                                     <label for="displayPose">Display Pose
                                         <input type="checkbox" id="displayPose" name="displayPose">
                                     </label>
