Magnification pt 2 I added a function whose goal it is to change the zoom of the views. And I mapped it to changes in the slider and magnification values however this currently does not work will need to be troubleshooted on laptop browser.

--- a/Web Page1.0/upload.html
+++ b/Web Page1.0/upload.html
@@ -15,7 +15,7 @@
 
     <title>Home - Printer Form</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="EditStyles.css">
+    <link rel="stylesheet" href="editStyles.css">
 </head>
 
 <body>
@@ -227,9 +227,8 @@
                                 </div>
                                 
                                 <div class="grid-control controlPreview">
-                                    <label for="displayPose">Display Pose
-                                        <input type="checkbox" id="displayPose" name="displayPose">
-                                    </label>
+                                    <button>View Zero</button>
+                                    <button>Display Pose</button>
                                 </div>                            
     
                                 <!-- TODO Add Line Color when pertinent
