--- a/Web Page1.0/upload.html
+++ b/Web Page1.0/upload.html
@@ -200,35 +200,35 @@
                                 <div class="grid-control">
                                     <div class="magnification-input-wrapper">
                                         <label for="magnification">Magnification: </label>
-                                        <input id="magnification-value" class="input-value" type="text" value="1.0">
+                                        <input id="magnification-value" class="input-value" type="text" value="0">
                                     </div>
-                                    <input type="range" id="magnification" name="magnification" min="0.1" max="2" step="0.1" value="1">
+                                    <input type="range" id="magnification" name="magnification" min="-2" max="2" step="0.1" value="0">
                                 </div>
                                 <div class="grid-control controlPreview">
                                     <div class="rotation-input-wrapper">
                                         <label for="rotationX">Rotation X-Axis: </label>
-                                        <input id="rotation-x-value" class="input-value" type="text" value="1.0">
+                                        <input id="rotation-x-value" class="input-value" type="text" value="0">
                                     </div>
-                                    <input type="range" id="rotationX" name="rotationX" min="0.1" max="2" step="0.1" value="1">
+                                    <input type="range" id="rotationX" name="rotationX" min="-2" max="2" step="0.1" value="0">
                                 </div>
                                 <div class="grid-control controlPreview">
                                     <div class="rotation-input-wrapper">
                                         <label for="rotationY">Rotation Y-Axis: </label>
-                                        <input id="rotation-y-value" class="input-value" type="text" value="1.0">
+                                        <input id="rotation-y-value" class="input-value" type="text" value="0">
                                     </div>
-                                    <input type="range" id="rotationY" name="rotationY" min="0.1" max="2" step="0.1" value="1">
+                                    <input type="range" id="rotationY" name="rotationY" min="-2" max="2" step="0.1" value="0">
                                 </div>
                                 <div class="grid-control controlPreview">
                                     <div class="rotation-input-wrapper">
                                         <label for="rotationZ">Rotation Z-Axis: </label>
-                                        <input id="rotation-z-value" class="input-value" type="text" value="1.0">
+                                        <input id="rotation-z-value" class="input-value" type="text" value="0">
                                     </div>
-                                    <input type="range" id="rotationZ" name="rotationZ" min="0.1" max="2" step="0.1" value="1">
+                                    <input type="range" id="rotationZ" name="rotationZ" min="-2" max="2" step="0.1" value="0">
                                 </div>
                                 
                                 <div class="grid-control controlPreview">
-                                    <button>View Zero</button>
-                                    <button>Display Pose</button>
+                                    <button id ="sceneRotationZero">View Zero</button>
+                                    <button id="displayPose">Display Pose</button>
                                 </div>                            
     
                                 <!-- TODO Add Line Color when pertinent
