magnification display_none

--- a/Web Page1.0/upload.html
+++ b/Web Page1.0/upload.html
@@ -197,7 +197,7 @@
                                         <option value="legal">Legal</option>
                                     </select>
                                 </div> -->
-                                <div class="grid-control">
+                                <div class="grid-control magnification-class">
                                     <div class="magnification-input-wrapper">
                                         <label for="magnification">Magnification: </label>
                                         <input id="magnification-value" class="input-value" type="text" value="1">
