fixed edit buttons

--- a/Web Page1.0/upload.html
+++ b/Web Page1.0/upload.html
@@ -173,7 +173,7 @@
                             </div>
                             <div id="slide-controls" class="carousel-horses carousel-base">
                                 <!-- Navigation Previous View Buttons -->
-                                <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+                                <button class="indicator" onclick="moveSlide(-1)">&#10094;</button>
                                 <!-- Text Indicators -->
                                 <div class="indicators">
                                     <button class="indicator" onclick="showSlides(0)">FRONT</button>
@@ -182,7 +182,7 @@
                                     <button class="indicator" onclick="showSlides(3)">LEFT</button>
                                 </div>
                                 <!-- Navigation Next View Buttons -->
-                                <button class="next" onclick="moveSlide(1)">&#10095;</button>
+                                <button class="indicator" onclick="moveSlide(1)">&#10095;</button>
                             </div>
                         </div>
                         <div id = "formControlsPreview">
@@ -197,7 +197,7 @@
                                         <option value="legal">Legal</option>
                                     </select>
                                 </div> -->
-                                <div class="grid-control magnification-class">
+                                <div class="grid-control">
                                     <div class="magnification-input-wrapper">
                                         <label for="magnification">Magnification: </label>
                                         <input id="magnification-value" class="input-value" type="text" value="1">
