--- a/Web Page1.0/upload.html
+++ b/Web Page1.0/upload.html
@@ -197,13 +197,13 @@
                                         <option value="legal">Legal</option>
                                     </select>
                                 </div> -->
-                                <div class="grid-control">
+                                <!-- <div class="grid-control">
                                     <div class="magnification-input-wrapper">
                                         <label for="magnification">Magnification: </label>
                                         <input id="magnification-value" class="input-value" type="text" value="1">
                                     </div>
                                     <input type="range" id="magnification" name="magnification" min="0.1" max="2" step="0.1" value="1">
-                                </div>
+                                </div> -->
                                 <div class="grid-control controlPreview">
                                     <div class="rotation-input-wrapper">
                                         <label for="rotationX">Rotation X-Axis: </label>
