pre soft launch 2 merge gallery was display:none (along with other stuff in shared) education was updated (activity, lesson, video) note: this is the first update of today I am just saving everything I can. TODO today: fix some buttons and the download. (not too broken) TODO update shared, add the forms

--- a/Web Page1.0/about.html
+++ b/Web Page1.0/about.html
@@ -24,11 +24,11 @@
                     <li class="menu-item dropdown">
                         <a href="./resource.html" class="dropbtn">Resources</a>
                         <div class="dropdown-content">
-                            <a href="#">TinkerCAD</a>
-                            <a href="#">Lesson Plans</a>
-                        </div>
-                    </li>
-                    <li><a href="./gallery.html">Gallery</a></li>
+                                <a href="#">TinkerCAD</a>
+                                <a href="#">Lesson Plans</a>
+                            </div>
+                        </li>
+                        <li class = "gallery gallery-nav"><a href="./gallery.html">Gallery</a></li>
                     <li><a href="./about.html">About</a></li>
                 </ul>
             </nav>
@@ -66,6 +66,7 @@
                         <option value="" selected="selected" disabled="true">--Please Select --</option>
                         <option value="student">Student</option>
                         <option value="educator">Educator</option>
+                        <option value="other">Other</option>
                         </select>
                     </div>
                     <div>
@@ -89,7 +90,7 @@
             <div class="team-list">
                 <!-- individual cards: Ian Gonsher -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/ian-gonsher.jpg" alt="ian gonsher">
+                    <img class="team-pic" src="./pictures/start page/ian-gonsher.jpg" alt="Ian Gonsher">
                     <h2 class="name">Ian Gonsher</h2>
                     <p class="card-text">Ian Gonsher is Assistant Professor of Practice in the School of Engineering
                         and Department of Computer Science at Brown University. His teaching and
@@ -101,7 +102,7 @@
 
                 <!-- Alara Kalfazade -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/AlaraKalfazade.jpg" alt="ian gonsher">
+                    <img class="team-pic" src="./pictures/start page/AlaraKalfazade.jpg" alt="Alara Kalfazade">
                     <h2 class="name">Alara Kalfazade</h2>
                     <p class="card-text">Alara Kalfazade is a senior at Brown University studying Computer Science-Economics. She is from Istanbul, Turkey. 
                         She is passionate about UI/UX and graphic design. 
@@ -111,7 +112,7 @@
 
                 <!-- Catherina Niu -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/CatherinaNiu.JPEG" alt="ian gonsher">
+                    <img class="team-pic" src="./pictures/start page/CatherinaNiu.JPEG" alt="Catherina Niu">
                     <h2 class="name">Catherina Niu</h2>
                     <p class="card-text">Catherina Niu is a senior at Brown University studying APMA-CS and Economics.
                         Catherina is from Shanghai, China and Canada. A fun fact about her is that she practices Brazilian Jiu Jitsu.
@@ -120,19 +121,18 @@
 
                 <!-- Jose Sandoval -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/ian-gonsher.jpg" alt="ian gonsher">
+                    <img class="team-pic" src="./pictures/start page/Jose.jpg" alt="Jose Sandoval">
                     <h2 class="name">Jose Sandoval</h2>
-                    <p class="card-text">Ian Gonsher is Assistant Professor of Practice in the School of Engineering
-                        and Department of Computer Science at Brown University. His teaching and
-                        research interests examine creative process as applied to interdisciplinary
-                        design practices, and the development of emerging and speculative technologies.
-                        <br>Website: <a href="https://www.gonsherdesign.com/" target="_blank">www.gonsherdesign.com/</a>
+                    <p class="card-text">Jose Sandoval is Brown University student studying computer science and Portuguese 
+                        and Brazilian Studies. He is passionate about information security and the intersection of social 
+                        justice and media. 
+                        <br>His latest projects can be found: <a href="linktr.ee/josesandoval018" target="_blank">linktr.ee/josesandoval018</a>
                     </p>
                 </div>
 
                 <!-- Katie Lynch -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/KatieLynch.jpg" alt="ian gonsher">
+                    <img class="team-pic" src="./pictures/start page/KatieLynch.jpg" alt="Katie Lynch">
                     <h2 class="name">Katie Lynch</h2>
                     <p class="card-text">Katie Lynch holds a BFA in Industrial Design from SCAD and 
                         is currently pursuing her MA in Design Engineering from RISD and Brown in a dual 
@@ -144,15 +144,12 @@
 
                 <!-- Vivian Li -->
                 <div class="card">
-                    <img class="team-pic" src="./pictures/start page/ian-gonsher.jpg" alt="ian gonsher">
+                    <img class="team-pic" src="./pictures/start page/Vivian Li.jpg" alt="Vivian Li">
                     <h2 class="name">Vivian Li</h2>
-                    <p class="card-text">Ian Gonsher is Assistant Professor of Practice in the School of Engineering
-                        and Department of Computer Science at Brown University. His teaching and
-                        research interests examine creative process as applied to interdisciplinary
-                        design practices, and the development of emerging and speculative technologies.
-                        Website: <a href="https://www.gonsherdesign.com/" target="_blank">www.gonsherdesign.com/</a>
+                    <p class="card-text">Vivian Li
                     </p>
                 </div>
+            </div>
             </div>
 
         </div>
@@ -169,15 +166,15 @@
                     <h1>|</h1>
                     <li><a href="./resource.html">Resources</a></li>
                     <h1>|</h1>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <h1>|</h1>
+                    <li class = "gallery gallery-nav"><a href="./gallery.html">Gallery</a></li>
+                        <h1 class = "gallery gallery-nav">|</h1>
                     <li><a href="./about.html">About</a></li>
                 </ul>
 
                 <ul class="footer-nav" style="text-align:center;">
-                    <li><a href="mailto:email@brown.edu">email@brown.edu</a></li>
+                    <li><a href="mailto:printerform1@gmail.com">printerform1@gmail.com</a></li>
                     <h1>|</h1>
-                    <li><a href="googlesurveylink.com">Feedback Form</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScCbfCI4AGwUjoJ6NzdIvLrkpYKWgth8RgtbY9oTs-fHyMbQw/viewform" target="_blank">Feedback Form</a></li>
                 </ul>
             </div>
 
