--- a/Web Page1.0/lesson-a.html
+++ b/Web Page1.0/lesson-a.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson A - PrinterForm</title>
+    <link rel="stylesheet" href="shared-styles.css">
     <link rel="stylesheet" href="activity.css">
 </head>
 
@@ -26,7 +27,7 @@
                             <a href="#">Lesson Plans</a>
                         </div>
                     </li>
-                    <li><a href="./gallery.html">Gallery</a></li>
+                    <li class = "gallery gallery-nav"><a href="./gallery.html">Gallery</a></li>
                     <li><a href="./about.html">About</a></li>
                 </ul>
             </nav>
@@ -139,7 +140,7 @@
                         href="https://www.createeducation.com/learn-3d-printing/school-3d-printing-workshops/">https://www.createeducation.com/learn-3d-printing/school-3d-printing-workshops/</a>
                 </div>
                 <!-- reference images -->
-                <div class="text-sub-container">
+                <div class="text-sub-container gallery reference-images">
                     <h2 class="instructions-sub-title" style="text-align:center;">Reference Images</h2>
                     <ul class="image-gallery">
                         <li class="image-gallery-item">
@@ -161,11 +162,37 @@
     </div>
 
 
+    <!--Feedback Tab-->
+    <input type="checkbox" id="slide" name="" value="" />
+    <div class="fb-container">
+        <label for="slide" class="toggle"><div id="fb-tab">Feedback</div></label>
+        <div class="sidebar" id="fb-form" >
+            <h3>Printerform Experience:</h3>
+            <iframe name="hiddenFrame" class="hide"></iframe>
+            <form id="fb-user-inputs-form" method="POST" target="hiddenFrame" action="https://script.google.com/macros/s/AKfycbxzzbnYd8Oy2uJ9FNa_CgAR_ukJbMPbcnWoSo8ohP2AZK55SQ_fEptRvLw0aJOvCHL6/exec">
+                <div id="fb-user-inputs-items">
+                    <div id="select-role">
+                        <label for="role" class="required">Your are a...</label>
+                        <select name="role" id="role" required >
+                        <option value="" selected="selected" disabled="true">--Please Select --</option>
+                        <option value="student">Student</option>
+                        <option value="educator">Educator</option>
+                        <option value="other">Other</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="text-input">Share your thoughts:</label>
+                        <textarea id="text-input" name="text-input"></textarea>
+                    </div>
+                </div>
+                <input type="button" id="fb-submit-btn" value="Submit" onclick="submitForm()">
+            </form>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScCbfCI4AGwUjoJ6NzdIvLrkpYKWgth8RgtbY9oTs-fHyMbQw/viewform" target="_blank"><button id="fb-survey-btn">Take Our Full Survey</button></a>
+            
+        </div>
+    </div>
 
-
-
-
-
+    
     <!--Footer-->
     <div id="footer">
         <div class="container">
@@ -176,15 +203,15 @@
                     <h1>|</h1>
                     <li><a href="./resource.html">Resources</a></li>
                     <h1>|</h1>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <h1>|</h1>
-                    <li><a href="./about.html">About</a></li>
+                    <li class = "gallery gallery-nav"><a href="./gallery.html">Gallery</a></li>
+                        <h1 class = "gallery gallery-nav">|</h1>
+                    <li ><a href="./about.html">About</a></li>
                 </ul>
 
                 <ul class="footer-nav" style="text-align:center;">
-                    <li><a href="mailto:email@brown.edu">email@brown.edu</a></li>
+                    <li><a href="mailto:printerform1@gmail.com">printerform1@gmail.com</a></li>
                     <h1>|</h1>
-                    <li><a href="googlesurveylink.com">Feedback Form</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScCbfCI4AGwUjoJ6NzdIvLrkpYKWgth8RgtbY9oTs-fHyMbQw/viewform" target="_blank">Feedback Form</a></li>
                 </ul>
             </div>
 
