--- a/Web Page1.0/index.html
+++ b/Web Page1.0/index.html
@@ -56,13 +56,17 @@
                     <li><a href="./about.html">About</a></li>
                 </ul>
             </nav>
-
-            <!-- upload button/div-->
-            <div id="upload-directory_container" class="background-container">
-                <button id="uploadBtn" class="upload-button"  type="button">START</button>
-            </div>
-
         </div>
+
+        <!-- upload button/div-->
+        <div id="upload-container">
+            <div class="container" style="margin-top:40px; margin-bottom: 0; background: #F1F1FD;">
+                <div class="background-container" style="background-color: transparent;">
+                    <button class="upload-button" id="uploadBtn" type="button">START</button>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
     <div id = "other-forms" class="gallery">
